fix text overlap problem

--- a/pay/pay.css
+++ b/pay/pay.css
@@ -404,3 +404,13 @@ a:hover {
 	width: auto;
 	display: block;
 }
+
+/* ------------------------------------- */
+
+.float-right {
+  float: right!important;
+}
+
+*, ::after, ::before {
+  box-sizing: border-box;
+}
